...
                    Spacer()
                    if ProcessInfo.processInfo.arguments.contains("UITesting") {
                        Button(action: {
                            isShowIdCard = true
                        }) {
                            Text("Test Button")
                        }.accessibility(identifier: "button.showIdCard")
                        VSpacer(100)
                    }
                }
                VStack {
                    Color.clear.frame(height: 280)
                    Button(action: {
...
                    }) {
                        VStack {
                            Image("xmark").renderingMode(.template).foregroundColor(Color("gray3"))
                            Text("이곳을 눌러 닫기").notoSans(.medium, size: 11, Color("gray3"))
                        }
                        
                    }.accessibility(identifier: "button.dismissIdCard")
                    Spacer()
                }.opacity(isShowIdCard ? 1 : 0)
                
                ZStack {
                    ZStack {
                        VStack {
...
